--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "astro-navbar": "^2.3.0",
     "flowbite": "^1.8.1",
     "tailwindcss": "^3.3.3"
+  },
+  "devDependencies": {
+    "prettier": "^3.2.5",
+    "prettier-plugin-astro": "^0.13.0"
   }
 }
