--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "astro": "^4.10.0",
     "astro-navbar": "^2.3.0",
     "flowbite": "^1.8.1",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.3",
+    "tailwindcss-animated": "^1.1.1"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
