--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Fede Parrilla",
+  "name": "fedeparrilla",
   "type": "module",
   "version": "1.0.0",
   "scripts": {
@@ -12,7 +12,7 @@
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
     "astro": "^4.10.0",
-    "astro-navbar": "^2.3.0",
+    "astro-navbar": "^2.3.3",
     "flowbite": "^1.8.1",
     "tailwindcss": "^3.3.3",
     "tailwindcss-animated": "^1.1.1"
